[package]
name = "pallets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
chrono = "0.4.31"
clap = { version = "4.4.11", features = ["derive"] }
directories = "5.0.1"
regex = "1.10.2"
ureq = "2.9.1"
